<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="250dp"
    android:background="@drawable/pop_up"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_gravity="center">

    <TextView
        style="@style/myPopUpTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/popUpHeader" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp">

        <Button
            android:id="@+id/joinBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_design"
            android:text="@string/joinBtn" />

        <Button
            android:id="@+id/createBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_design"
            android:text="@string/createBtn" />
    </LinearLayout>

</LinearLayout>